scroll overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-y: auto;
+}
+
 body {
     height: 100vh;
     font-family: 'Lato', sans-serif;
